Fix: Exclude nav-btn from the toc area to prevent overlap during scrolling

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -508,14 +508,13 @@ body[dir="rtl"] .book-menu {
 
 /* Right Navigation */
 
-.book-nav, .book-mobile-nav {
+.book-nav {
   position: fixed;
   bottom: 0;
   right: 0;
-  z-index: 100;
-
+  z-index: 101;
   margin-bottom: $padding-16;
-  margin-right: $padding-16;
+  margin-right: $padding-64;
 
   display: flex;
   align-items: flex-end;
@@ -544,14 +543,6 @@ body[dir="rtl"] .book-menu {
     &:active {
       transform: scale(0.95);
     }
-  }
-}
-
-.book-mobile-nav {
-  visibility: hidden;
-
-  .book-nav-btn3 {
-    opacity: 0.7;
   }
 }
 
@@ -711,8 +702,8 @@ body[dir="rtl"] .book-menu {
     visibility: hidden;
   }
 
-  .book-mobile-nav {
-    visibility: visible;
+  .book-nav {
+    margin-right: $padding-32;
   }
 
   .book-header {
